--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -15,30 +15,27 @@
 img[alt='alt text']
     width: 200px
 
-.search-box {
-  order: 1;
-  margin-right: 0;
-  margin-left: 1rem;
+.search-box
+  order: 1
+  margin-right: 0
+  margin-left: 1rem
 
-  .suggestions {
-    left: auto !important;
-    right: 0 !important;
-  }
-}
+  .suggestions
+    left: auto !important
+    right: 0 !important
 
-.social-share {
+.social-share
   display grid
   justify-content center
-}
 
-#teile-diese-bibliothek {
+
+#teile-diese-bibliothek
   text-align center
-}
 
-video {
-  width: 100%;
-  height: 100%;
-}
+
+video
+  width: 100%
+  height: 100%
 
 h4
   font-size 1.35rem !important
@@ -47,3 +44,23 @@ h4
   margin-top -3.1rem
   padding-top 4.6rem
   margin-bottom 0
+
+button
+  background-color: $accentColor
+  border: none
+  color: white !important
+  padding: 15px 32px
+  text-align: center
+  text-decoration: none
+  display: inline-block
+  font-size: 16px
+  opacity: 0.8;
+  transition: 0.2s;
+
+.button-a
+  color white !important
+  text-decoration none !important
+
+button:hover
+  opacity 1
+  cursor pointer
