updated text, icons, meta

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -68,3 +68,8 @@ button:hover
 .navbar .logo
   width auto
   min-width unset !important
+
+.required-star
+  color red
+  font-size 1.7rem
+  line-height 1rem
