--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -78,3 +78,9 @@ button:hover
   width 100%
   height 80vw
   max-height 500px;
+
+.social-share-text
+  color #606b76
+  font-family 'Raleway', Arial, Helvetica, sans-serif
+  line-height 1.7
+  text-align center
